[PE] Fix repeating table header/footer printing when page is scrolled

Bug: 854848
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Id1cf7b09fc32141758792c26f805fb73a1f131cb
Reviewed-on: https://chromium-review.googlesource.com/1109500
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569420}
Former-commit-id: d1615ffa2f911b8d8582b02f1b15666fad3725b4